plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.naebom.stroke'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral() // Maven Central 추가
	maven { url "https://maven.google.com" } //Google Maven 저장소 추가
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'com.google.maps:google-maps-services:2.1.0'
	implementation 'org.apache.commons:commons-text:1.10.0' // Levenshtein 거리 계산용
	implementation 'commons-io:commons-io:2.11.0' // 파일 저장 용도

	// Google Cloud BOM 적용
	implementation platform('com.google.cloud:libraries-bom:26.21.0')

	// 버전 명시 없이 BOM에 의해 관리됨
	implementation 'com.google.cloud:google-cloud-speech'
	implementation 'com.google.auth:google-auth-library-oauth2-http'  // GoogleCredentials 관련 라이브러리 추가

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.eclipse.angus:angus-mail:2.0.2' // Spring Boot 3.x용 Jakarta Mail 추가
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
